Add project, not finished

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,1 +1,18 @@
 @import "settings.scss";
+
+//RWD//
+$max-tablet-width: 1024px;
+$min-tablet-width: 577px;
+$max-mobile-width: 576px;
+
+@mixin tablet {
+  @media (min-width: $min-tablet-width) and (max-width: $max-tablet-width) {
+    @content;
+  }
+}
+
+@mixin mobile {
+  @media (max-width: $max-mobile-width) {
+    @content;
+  }
+}
