Add some changes before deploy

--- a/src/components/features/Logo/Logo.module.scss
+++ b/src/components/features/Logo/Logo.module.scss
@@ -16,7 +16,7 @@
         .title {
             color: $color-white;
             padding: 20px 40px;
-            font-family: $font-logo;
+            font-family: $font-main;
             font-size: 100px;
             border: 5px solid $color-white;
             border-radius: 10px;
