--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -1,10 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
 
 $base-size: 12px;
 $color-violet: #a29bfe;
 $color-blue: #C0C0C0;
-$color-red: #d63031;
 $color-white: #f3f3f3;
-$font-main: 'Quicksand', sans-serif;
-$font-logo: 'Architects Daughter', cursive;
+$font-main: 'Indie Flower', cursive;
