--- a/src/components/views/Product/Product.module.scss
+++ b/src/components/views/Product/Product.module.scss
@@ -12,14 +12,14 @@
         display: flex;
         width: 100%;
         .leftContainer {
-            flex: 0 0 48%;
+            flex: 0 0 50%;
             .postBox {
                 height: 510px;
                 margin: 0 20px;
                 border: 2px solid gray;
                 border-radius: 5px;
                 display: flex;
-                flex: 0 0 30%;
+                flex: 0 0 40%;
                 flex-direction: column;
                 text-decoration: none;
                 color: black;
@@ -75,10 +75,11 @@
                 }
             }
             .button {
-                padding: 10px 30px;
+                margin: 30px;
+                padding: 20px 30px;
                 font-size: 16px;
                 border-radius: 4px;
-                background-color: black;
+                background-color: gray;
                 color: $color-white;
                 text-decoration: none;
                 margin: 10px;
