Change some styles

--- a/src/components/features/Logo/Logo.module.scss
+++ b/src/components/features/Logo/Logo.module.scss
@@ -4,8 +4,11 @@
 .root {
     height: 100vh;
     width: 100%;
-    background-color: $color-blue;
-    background: url('https://images.pexels.com/photos/8253222/pexels-photo-8253222.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260');
+    background-color: $color-main;
+    background: url('https://images.pexels.com/photos/8253222/pexels-photo-8253222.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260');   
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     .overlay {
         display: flex;
         align-items: center;
