--- a/src/components/features/OrderSummary/OrderSummary.module.scss
+++ b/src/components/features/OrderSummary/OrderSummary.module.scss
@@ -61,7 +61,7 @@
       width: 40%;
       .formInput {
         margin: 10px 20px;
-        border: 1px solid $color-blue;
+        border: 1px solid $color-main;
         border-radius: 5px;
         padding: 10px;
         resize: none;
@@ -73,9 +73,9 @@
       .summary__checkoutBtn {
         padding: 10px 17px;
         margin: 20px 10px;
-        border: 1px solid $color-blue;
+        border: 1px solid $color-main;
         border-radius: 10px;
-        background: $color-blue;
+        background: $color-main;
         color: $color-white;
         font-size: 1.2rem;
         font-weight: bold;
@@ -83,7 +83,7 @@
       }
       .summary__checkoutBtn:focus {
         outline: none;
-        border: 1px solid $color-blue;
+        border: 1px solid $color-main;
       }
       .summary__checkoutBtn:hover {
         opacity: 0.75;
