--- a/src/components/layout/Footer/Footer.module.scss
+++ b/src/components/layout/Footer/Footer.module.scss
@@ -1,34 +1,20 @@
 @import '../../../styles/settings.scss';
 
 .root {
-    background-color: $color-blue;
-    .footerLink {
-        display: flex;
-        justify-content: center;
-        .navLink {
-            font-family: $font-main;
-            font-size: 24px;
-            text-decoration: none;
-            color: $color-white;
-            margin: 20px 30px;
-        }
-    }
-    .leftBar {
+    background-color: $color-main;
+    .footerBar {
         display: flex;
         justify-content: space-evenly;
         align-items: center;
         padding: 10px;
-        h2 {
-            margin-right: 10px;
-        }
-        .iconBox {
+        .iconBar {
             .icon {
                 cursor: pointer;
                 color: $color-white;
                 width: 30px;
                 &:hover {
-                    transform: scale(1.6);
-                    transition: 2s all;
+                    transform: scale(1.5);
+                    transition: 1s all;
                 }
             }
         }
@@ -36,10 +22,9 @@
     .copyright {
         display: flex;
         justify-content: center;
-
         span {
             color: $color-white;
-            padding-bottom: 20px;
+            padding-bottom: 10px;
             font-family: $font-main;
         }
     }
