--- a/src/components/layout/NavBar/NavBar.module.scss
+++ b/src/components/layout/NavBar/NavBar.module.scss
@@ -3,7 +3,7 @@
 .root {
     display: flex;
     justify-content: center;
-    background-color: $color-blue;
+    background-color: $color-main;
     position: relative;
     .navLink {
         font-family: $font-main;
