--- a/src/components/features/Cart/Cart.module.scss
+++ b/src/components/features/Cart/Cart.module.scss
@@ -53,9 +53,9 @@
       
       .summary__checkoutBtn {
         padding: 10px 17px;
-        border: 1px solid $color-blue;
+        border: 1px solid $color-main;
         border-radius: 10px;
-        background: $color-blue;
+        background: $color-main;
         color: $color-white;
         font-size: 1.2rem;
         font-weight: bold;
@@ -64,7 +64,7 @@
       
       .summary__checkoutBtn:focus {
         outline: none;
-        border: 1px solid $color-blue;
+        border: 1px solid $color-main;
       }
       
       .summary__checkoutBtn:hover {
