--- a/src/components/features/CartItem/CartItem.module.scss
+++ b/src/components/features/CartItem/CartItem.module.scss
@@ -17,7 +17,7 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      color: $color-blue;
+      color: $color-main;
       label {
         font-weight: bold;
         margin-bottom: 5px;
@@ -54,13 +54,13 @@
       margin-left: 0.4rem;
       width: 60px;
       border-radius: 10px;
-      border: 1px solid $color-blue;    
+      border: 1px solid $color-main;    
       outline: none;
     }
     .actions__deleteItemBtn {
       width: 50px;
       height: 50px;
-      border: 1px solid $color-blue;
+      border: 1px solid $color-main;
       border-radius: 50%;
       cursor: pointer;
       transition: all ease-in-out 0.7s;
@@ -69,7 +69,7 @@
     
     .actions__deleteItemBtn:hover {
       transform: scale(1.2) rotate(360deg);
-      background-color: $color-blue;
+      background-color: $color-main;
       color: $color-white;
     }
     
