--- a/src/components/features/OrderItem/OrderItem.module.scss
+++ b/src/components/features/OrderItem/OrderItem.module.scss
@@ -19,7 +19,7 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        color: $color-blue;
+        color: $color-main;
         .details__title {
           font-size: 1rem;
           font-weight: bold;
