--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
 
 $base-size: 12px;
-$color-violet: #a29bfe;
-$color-blue: #C0C0C0;
-$color-white: #f3f3f3;
+$color-main: #C0C0C0;
+$color-white: #ffff;
 $font-main: 'Indie Flower', cursive;
